# hypnos

./: README.md
app/: .project  settings.gradle
app/app/: README.md  build.gradle
app/app/src/androidTest/java/com/example/hypnos/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/hypnos/: Autostart.java  BleService.kt  BleServiceStarter.kt  MainActivity.kt  Restarter.kt  Utils.kt
app/app/src/main/java/com/example/hypnos/ble_service/: BleService.kt  BleServiceStarter.kt  NotificationHelper.kt
app/app/src/main/java/com/example/hypnos/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
app/app/src/main/java/com/example/hypnos/ui/home/: HomeFragment.kt  HomeViewModel.kt  ScanResult.kt  ScanResultsAdapter.kt
app/app/src/main/java/com/example/hypnos/ui/slideshow/: SlideshowFragment.kt  SlideshowViewModel.kt
app/app/src/main/res/layout/: fragment_home.xml
app/app/src/main/res/navigation/: mobile_navigation.xml
app/app/src/main/res/values/: strings.xml
app/app/src/test/java/com/example/hypnos/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
firmware/: .clang-format  CMakeLists.txt  README.md  build_and_flash.sh  build_program.sh  flash_program.sh  flash_softdevice.sh  gcc_nrf52840.ld  generate_cmake_file_for_sdk.sh
firmware/docs/: top_level_state_machine.wsd
firmware/nrf_sdk/: .gitignore  sdk_wrapper.mk
firmware/nrf_sdk/base_makefile/: gpio.mk  gpio_makefile.mk  twi.mk  twi_makefile.mk
firmware/nrf_sdk/sdk/components/ble/ble_services/ble_bas/: ble_bas.c
firmware/nrf_sdk/sdk/components/toolchain/gcc/: Makefile.common
firmware/nrf_sdk/sdk/examples/peripheral/blinky/pca10040/s132/armgcc/: Makefile
firmware/src/: CMakeLists.txt  adc_module.cpp  adc_module.hpp  advertising_module.cpp  advertising_module.hpp  ble_module.cpp  ble_module.hpp  bms_module.cpp  bms_module.hpp  computer_switch_module.cpp  computer_switch_module.hpp  connection_module.cpp  connection_module.hpp  firmware_main.c  firmware_main.cpp  gpio_module.cpp  gpio_module.hpp  misc_module.cpp  misc_module.hpp  pm_module.cpp  pm_module.hpp  power_module.cpp  power_module.hpp  qwr_module.cpp  qwr_module.hpp  rv3028.cpp  rv3028.hpp  sdk_config.h  state_machine.cpp  state_machine.hpp  twi_main.c  twi_module.cpp  twi_module.hpp
firmware/src/ble/: advertising_module.cpp  advertising_module.hpp  bas_module.cpp  bas_module.hpp  ble_module.cpp  bms_module.hpp  connection_module.cpp  connection_module.hpp  gap_module.cpp  gap_module.hpp  gatt_module.cpp  gatt_module.hpp  pm_module.cpp  pm_module.hpp  qwr_module.cpp  qwr_module.hpp  timetable_service_module.cpp  timetable_service_module.hpp
firmware/src/ble/service/: bas_module.cpp  bas_module.hpp  ble_characteristic.hpp  ble_custom_characteristic_value_type.hpp  bms_module.cpp  exception_list.cpp  exception_list.hpp  time_exception_list.cpp  time_exception_list.hpp  time_hour_minute.cpp  time_hour_minute.hpp  timetable_service_module.cpp  timetable_service_module.hpp
firmware/src/dof/: CMakeLists.txt  bno055.c  bno055.h  dof.c  dof.h
firmware/src/sdk_config/: sdk_config_common.h
firmware/src/sdk_config/pca10056/: sdk_config.h
firmware/src/sdk_config/pca10059/: sdk_config.h
firmware/src/system_view/Config/: SEGGER_SYSVIEW_Config_NoOS.c
firmware/src/system_view/Description/: SYSVIEW_NoOS.txt
firmware/src/utils/: CMakeLists.txt  twi_utils.c  twi_utils.h
pcb/: README.md  footprints
pcb/hypnos/: fp-info-cache  fp-lib-table  hypnos-cache.lib  hypnos.kicad_pcb  hypnos.kicad_pcb-bak  hypnos.pro  hypnos.sch  hypnos.sch-bak  sym-lib-table
pcb/hypnos/footprints/: BAT_BK-883.kicad_mod  BC-2003-TR.kicad_mod  BT840F.kicad_mod  Conn-Female-RightAnglex3-SMD.kicad_mod  Conn-Female-RightAnglex7-SMD.kicad_mod  FDN361BN.kicad_mod  RV-3028-C7.kicad_mod  SW_KSR223GLFG.kicad_mod
pcb/hypnos/gerbers/: hypnos-B_Cu.gbr  hypnos-B_Mask.gbr  hypnos-B_Paste.gbr  hypnos-B_SilkS.gbr  hypnos-Edge_Cuts.gbr  hypnos-F_Cu.gbr  hypnos-F_Mask.gbr  hypnos-F_Paste.gbr  hypnos-F_SilkS.gbr  hypnos-job.gbrjob  hypnos.drl
pcb/hypnos/symbols/: BT840F.lib  Hypnos.lib
